Add workaround for managing map item's coordinates

can be removed once coordinates are passed by value,
see QTBUG-25636

Task-number: QTBUG-26550
Change-Id: Ibd862cb87550bf8f2b31a7a14750e4b676d5c0e6
Reviewed-by: Aaron McCarthy <aaron.mccarthy@nokia.com>